# RivalGrounds

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.ps1  build.sh  clean.bat  clean.sh  run.bat  run.sh  vcpkg.json
.github/workflows/: build.yml  build_project.yml  cmake-multi-platform.yml
resources/: right.png:Zone.Identifier
src/: .clang-format  App.cpp  App.h  Camera.cpp  Camera.h  Colors.h  Material.cpp  Material.h  MaterialRepo.cpp  MaterialRepo.h  Mesh.cpp  Mesh.h  MeshRepo.cpp  MeshRepo.h  Octree.cpp  Octree.h  PNGImage.h  Renderer.cpp  Renderer.h  Repo.cpp  Repo.h  Scene.cpp  Scene.h  SceneCommon.cpp  SceneCore.cpp  SceneObject.cpp  SceneObject.h  ScenePhysics.cpp  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramRepo.cpp  ShaderProgramRepo.h  ShaderRepo.cpp  ShaderRepo.h  TestScene.cpp  TestScene.h  Texture.cpp  Texture.h  (+14 more)
src/Components/: CameraComponent.h  KinematicsComponent.h  TransformComponent.h
src/Core/: ComponentManager.h  ComponentRegistry.h  EntityManager.cpp  EntityManager.h  EventListener.h  EventManager.h  ServiceLocator.h  SystemInitializer.h  SystemManager.cpp  SystemManager.h  event_listener_generator.py  system_include_generator.py
src/Events/: InputEvent.h
src/Graphics/: ErrorHandling.cpp  ErrorHandling.h  Window.cpp  Window.h
src/Graphics/Shaders/: ShaderIncludes.cpp  ShaderIncludes.h  ShaderManager.cpp  ShaderManager.h  shader_include_generator.py
src/Graphics/Window/: Callbacks.cpp  Callbacks.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
src/Systems/: CameraSystem.cpp  CameraSystem.h
src/components/: BoundingBox.cpp  BoundingBox.h  PhysicsComponent.cpp  PhysicsComponent.h  TransformComponent.cpp  TransformComponent.h  vertex_formats.h
src/repos/: MaterialRepo.cpp  MaterialRepo.h  MeshRepo.h  ShaderProgramRepo.cpp  ShaderProgramRepo.h  ShaderRepo.cpp  ShaderRepo.h  TextureRepo.cpp  TextureRepo.h
src/shaders/: AABB.geo.glsl  AABB.vert.glsl  axes.frag.glsl  axes.geo.glsl  axes.vert.glsl  cube.frag.glsl  cube.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  triangle.frag  triangle.vert  triangle.vert.glsl
src/util/: definitions.h  editor.cpp  editor.h  filesystem.cpp  filesystem.h  gl_debug.cpp  gl_debug.h  obj_model.cpp  obj_model.h  opengl.h  png_image.cpp  png_image.h
tests/: CMakeLists.txt  Component.cc  Entity.cc  Event.cc  System.cc
toolchains/: mac.cmake  win32.cmake  win64.cmake
